United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 6932480 Crash in CompilerThread/Parser. Unloaded array klass?
6932480 : Crash in CompilerThread/Parser. Unloaded array klass?

Details
Type:
Bug
Submit Date:
2010-03-05
Status:
Closed
Updated Date:
2010-09-24
Project Name:
JDK
Resolved Date:
2010-03-15
Component:
hotspot
OS:
generic
Sub-Component:
runtime
CPU:
generic
Priority:
P2
Resolution:
Fixed
Affected Versions:
6u19
Fixed Versions:
6u19

Related Reports
Backport:
Backport:
Backport:
Backport:
Backport:
Backport:
Backport:
Backport:
Backport:
Backport:
Backport:
Backport:
Relates:

Sub Tasks

Description
Testcase is crashing in 6u19, no problem with 6u18.


-----------------  lwp# 9 / thread# 9  --------------------
 ff24ab10 _lwp_kill (6, 0, 5, ff2d5360, ffffffff, 6) + 8
 ff1d4b44 abort    (2d040, 1, 6, ff2d3940, fbc5c, 0) + 108
 feb2afc4 void os::abort(bool) (1, fee15fc4, 1, fedfc000, 19fc4, 19c00) + 5c
 fec4d5b8 void VMError::report_and_die() (fee3a814, fee2d7b8, 1, fee40508, fee15f9c, 0) + cd8
 fe5c0df4 JVM_handle_solaris_signal (b, d71fe6d8, d71fe420, b1800, fa400, 31771) + a8c
 ff245fa8 __sighndlr (b, d71fe6d8, d71fe420, fe5c0330, 0, 0) + c
 ff23a3c4 call_user_handler (b, d71fe6d8, d71fe420, 0, 960f8, ff2d069c) + 41c
 fe7c35f4 bool ciKlass::is_subtype_of(ciKlass*) (0, fa400, 234c78, 1480, fee396c0, fee396cc) + 13c
 fe8cb3dc int GraphKit::static_subtype_check(ciKlass*,ciKlass*) (d71feab4, 230328, 233e78, 5c55c, fedfc000, 234c78) + 80
 fe5bac60 Node*GraphKit::gen_checkcast(Node*,Node*,Node**) (d71feab4, 2, 14b830, 0, 1c71c0, 14db90) + dc
 fe5d9b58 void Parse::do_checkcast() (d71feab4, 234c78, fa0, 1, 469b68, 14db90) + 128
 feb41350 void Parse::do_all_blocks() (d71feab4, 234710, 0, d71feb30, fee2db0e, fee53c08) + 4b0
 fe55fde0 Parse::Parse #Nvariant 1(JVMState*,ciMethod*,float) (0, 0, 234598, 1, d71feab4, 11c6e0) + 938
 fe55de70 JVMState*ParseGenerator::generate(JVMState*) (11c6d0, 469aa8, 3d7ec, fedfc000, fe3, d71ff5f8) + 9c
 fe550158 void Parse::do_call() (d71fed3c, d71fedb8, 233da0, 0, fedfc000, 224608) + 374
 feb41350 void Parse::do_all_blocks() (d71fed3c, 233a08, 0, d71fedb8, fee2db0e, fee53c08) + 4b0
 fe55fde0 Parse::Parse #Nvariant 1(JVMState*,ciMethod*,float) (0, 0, 233850, 1, d71fed3c, 11c5b8) + 938
 fe55de70 JVMState*ParseGenerator::generate(JVMState*) (11c5a8, 469788, 3d7ec, fedfc000, fe3, d71ff5f8) + 9c
 fe550158 void Parse::do_call() (d71fefc4, d71ff040, 230250, 0, fedfc000, 221020) + 374
 feb41350 void Parse::do_all_blocks() (d71fefc4, 230180, 300, d71ff040, fee2db0e, fee53c08) + 4b0
 fe55fde0 Parse::Parse #Nvariant 1(JVMState*,ciMethod*,float) (0, 0, 22de48, 1, d71fefc4, 11bb80) + 938
 fe55de70 JVMState*ParseGenerator::generate(JVMState*) (11bb70, 184f40, 3d7ec, fedfc000, fe3, d71ff5f8) + 9c
 fe80a9a0 Compile::Compile #Nvariant 1(ciEnv*,C2Compiler*,ciMethod*,int,bool,bool) (d71ff5f8, 3, 1c20d8, 11bb70, 186658, fece0a1a) + 950
 fe5c1f68 void C2Compiler::compile_method(ciEnv*,ciMethod*,int) (2e650, d71ffc5c, 22cf28, ffffffff, fecc1878, fee1e2c4) + b0
 fe5c2df4 void CompileBroker::invoke_compiler_on_method(CompileTask*) (feb18, 11a800, 74e, 0, fe5c1eb8, fa400) + 9fc
 fe63acbc void CompileBroker::compiler_thread_loop() (0, fee397ec, fa400, f3408, 31800, 31800) + 65c
 febf98b8 void JavaThread::thread_main_inner() (fa400, fa770, 9, f, fedfc000, 0) + 48
 feb2a060 java_start (fa400, 34c, fedfc000, fed48701, fb7a8, fee488b4) + 22c
 ff245ea0 _lwp_start (0, 0, 0, 0, 0, 0)

                                    

Comments
EVALUATION

http://hg.openjdk.java.net/hsx/hsx17/master/rev/2ade0664189b
                                     
2010-04-09
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot-rt/hotspot/rev/f5dd08ad65df
                                     
2010-04-08
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot/hotspot/rev/f5dd08ad65df
                                     
2010-04-07
EVALUATION

http://hg.openjdk.java.net/hsx/hsx17/baseline/rev/2ade0664189b
                                     
2010-04-06
EVALUATION

6626217 inadvertantly cleans up some required code, reinstating it.

1.4.2 is also affected, the backports were all different with 5.0 not affected.
                                     
2010-03-08



Hardware and Software, Engineered to Work Together