6932480: Fix crash in CompilerThread/Parser. Unloaded array klass?

Restore code deleted in 6626217

Reviewed-by: asaha, kevinw